[package]
name = "simper-filter"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Eckes <stephan@neodsp.com>"]
description = "State Variable Filters for real-time audio in pure Rust"
readme = "README.md"
homepage = "https://neodsp.com/"
repository = "https://github.com/neodsp/simper-filter/"
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"
keywords = ["svf", "audio", "dsp", "filter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
thiserror = "1.0"
